--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,6 +3,7 @@
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
         xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/cl_home_activity"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="#f0f0f0"
@@ -17,7 +18,7 @@
             android:textAlignment="center"
             android:text="List is Empty\n(Empty View Placeholder)"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" android:layout_gravity="center"/>
+            android:layout_height="wrap_content" android:layout_gravity="center" android:id="@+id/tv_empty_view"/>
 
     <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rv_home_incidents"
