--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,23 +9,28 @@
         android:background="#f0f0f0"
         tools:context=".ui.home.HomeActivity">
 
-    <!--Empty View-->
-    <TextView
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"
-            android:textAlignment="center"
-            android:text="List is Empty\n(Empty View Placeholder)"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" android:layout_gravity="center" android:id="@+id/tv_empty_view"/>
-
-    <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/rv_home_incidents"
-            android:layout_weight="1"
+    <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            tools:listitem="@layout/item_home_incidents"
-    />
+            android:layout_height="match_parent">
+        <!--Empty View-->
+        <TextView
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintLeft_toLeftOf="parent"
+                android:textAlignment="center"
+                android:text="List is Empty\n(Empty View Placeholder)"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" android:layout_gravity="center" android:id="@+id/tv_empty_view"/>
+
+        <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/rv_home_incidents"
+                android:layout_weight="1"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                tools:listitem="@layout/item_home_incidents"
+        />
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
