--- a/app/src/main/res/layout/item_home_incidents.xml
+++ b/app/src/main/res/layout/item_home_incidents.xml
@@ -16,32 +16,48 @@
     <LinearLayout
             android:orientation="vertical"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" android:padding="12dp">
+            android:layout_height="wrap_content"
+            android:paddingBottom="12dp">
         <ImageView
                 android:id="@+id/iv_incident_img_thumb"
-                android:src="@mipmap/ic_launcher"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
+                android:src="@drawable/ic_launcher_background"
+                android:adjustViewBounds="true"
+                android:scaleType="centerCrop"
+                android:layout_width="match_parent"
+                android:layout_height="180dp"
+                android:layout_marginBottom="8dp"/>
         <TextView
                 android:id="@+id/tv_incident_title"
                 android:text="Title"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
+                style="@style/TextAppearance.MaterialComponents.Headline6"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:paddingStart="12dp"
+                android:paddingEnd="12dp" android:layout_margin="4dp"/>
         <TextView
                 android:id="@+id/tv_incident_address"
                 android:text="Address"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
+                style="@style/TextAppearance.MaterialComponents.Body1"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:paddingStart="12dp"
+                android:paddingEnd="12dp" android:layout_margin="4dp"/>
         <TextView
                 android:id="@+id/tv_incident_type"
                 android:text="Type"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
+                style="@style/TextAppearance.MaterialComponents.Chip"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:paddingStart="12dp"
+                android:paddingEnd="12dp" android:textAlignment="textEnd" android:layout_margin="4dp"/>
         <TextView
                 android:id="@+id/tv_incident_time"
                 android:text="Occurred at"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
+                style="@style/TextAppearance.MaterialComponents.Caption"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:paddingStart="12dp"
+                android:paddingEnd="12dp" android:textAlignment="textEnd" android:layout_margin="4dp"/>
 
     </LinearLayout>
 
